z-index fix

--- a/style.css
+++ b/style.css
@@ -26,7 +26,6 @@
   text-decoration: none;
   font-size: 17px;
   font-weight: 900;
-  border-radius: 5%;
 }
 
 .topnav a:hover {
@@ -115,10 +114,14 @@
   line-height: 150%;
   font-size: 2.4em;
   padding: 15px;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .speech a:visited {
+  color: white;
+}
+
+.speech a:link {
   color: white;
 }
 
@@ -130,53 +133,60 @@
 @keyframes bounce-in-top {
   0% {
     -webkit-transform: translateY(-500px);
-            transform: translateY(-500px);
+    transform: translateY(-500px);
     -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
     opacity: 0;
   }
+
   38% {
     -webkit-transform: translateY(0);
-            transform: translateY(0);
+    transform: translateY(0);
     -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
     opacity: 1;
   }
+
   55% {
     -webkit-transform: translateY(-65px);
-            transform: translateY(-65px);
+    transform: translateY(-65px);
     -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
   }
+
   72% {
     -webkit-transform: translateY(0);
-            transform: translateY(0);
+    transform: translateY(0);
     -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
   }
+
   81% {
     -webkit-transform: translateY(-28px);
-            transform: translateY(-28px);
+    transform: translateY(-28px);
     -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
   }
+
   90% {
     -webkit-transform: translateY(0);
-            transform: translateY(0);
+    transform: translateY(0);
     -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
   }
+
   95% {
     -webkit-transform: translateY(-8px);
-            transform: translateY(-8px);
+    transform: translateY(-8px);
     -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
   }
+
   100% {
     -webkit-transform: translateY(0);
-            transform: translateY(0);
+    transform: translateY(0);
     -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
   }
 }
 
@@ -185,15 +195,15 @@
     display: none;
   }
 }
+
 .speech h3 {
   font-size: 1 em;
   width: 80%;
   margin: 15px;
-  
 }
 
 .speech h4 {
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin-top: 10px;
 }
 
@@ -205,32 +215,35 @@
 .imagen img {
   max-width: 60%;
   margin-bottom: 60px;
-    -webkit-animation: roll-in-left 0.6s ease-out both;
-            animation: roll-in-left 0.6s ease-out both;
-  }
+  -webkit-animation: roll-in-left 0.6s ease-out both;
+  animation: roll-in-left 0.6s ease-out both;
+}
 
 
- @-webkit-keyframes roll-in-left {
+@-webkit-keyframes roll-in-left {
   0% {
     -webkit-transform: translateX(-800px) rotate(-540deg);
-            transform: translateX(-800px) rotate(-540deg);
+    transform: translateX(-800px) rotate(-540deg);
     opacity: 0;
   }
+
   100% {
     -webkit-transform: translateX(0) rotate(0deg);
-            transform: translateX(0) rotate(0deg);
+    transform: translateX(0) rotate(0deg);
     opacity: 1;
   }
 }
+
 @keyframes roll-in-left {
   0% {
     -webkit-transform: translateX(-800px) rotate(-540deg);
-            transform: translateX(-800px) rotate(-540deg);
+    transform: translateX(-800px) rotate(-540deg);
     opacity: 0;
   }
+
   100% {
     -webkit-transform: translateX(0) rotate(0deg);
-            transform: translateX(0) rotate(0deg);
+    transform: translateX(0) rotate(0deg);
     opacity: 1;
   }
 }
@@ -253,11 +266,11 @@
   margin-top: 5vh;
   font-size: 1.6em;
   text-transform: uppercase;
-  line-height:1;
+  line-height: 1;
   text-align: center;
   background: linear-gradient(90deg, rgb(97, 36, 64) 0%, rgb(122, 24, 24) 20%, rgb(190, 15, 15) 39%, rgb(156, 47, 47) 50%, rgb(168, 85, 30) 60%, rgb(107, 93, 93) 80%, rgb(0, 0, 0) 100%);
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;	
+  -webkit-text-fill-color: transparent;
   animation: shine 3s infinite;
   background-size: 200%;
   background-position: left;
@@ -285,18 +298,21 @@
 }
 
 .cards1 h3 {
-  color:rgb(167, 69, 69);
+  color: rgb(167, 69, 69);
   animation: shine 3s infinite;
   background: linear-gradient(90deg, rgb(97, 36, 64) 0%, rgb(122, 24, 24) 20%, rgb(190, 15, 15) 39%, rgb(156, 47, 47) 50%, rgb(168, 85, 30) 60%, rgb(107, 93, 93) 80%, rgb(0, 0, 0) 100%);
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;	
+  -webkit-text-fill-color: transparent;
   animation: shine 3s infinite;
   background-size: 200%;
   background-position: left;
 }
+
 @keyframes shine {
-  to{background-position: right}
- 
+  to {
+    background-position: right
+  }
+
 }
 
 .cards1 img {
@@ -311,33 +327,36 @@
   0% {
     transform: rotate(0);
   }
+
   100% {
     transform: rotate(360deg);
   }
 }
- /* ------------------LINUS------------ */
+
+/* ------------------LINUS------------ */
 .linus img {
   margin: auto;
   width: 100%;
   height: auto;
   min-height: 50vh;
-  object-fit:cover;
+  object-fit: cover;
   -webkit-animation: kenburns-center 5s ease-out both;
-	        animation: kenburns-center 5s ease-out both;
+  animation: kenburns-center 5s ease-out both;
 }
 
 @keyframes kenburns-center {
   0% {
     -webkit-transform: scale(0.8) translate(0, 0);
-            transform: scale(0.8) translate(0, 0);
+    transform: scale(0.8) translate(0, 0);
     -webkit-transform-origin: 16% 16%;
-            transform-origin: 16% 16%;
+    transform-origin: 16% 16%;
   }
+
   100% {
     -webkit-transform: scale(1) translate(0px, 0px);
-            transform: scale(1) translate(0px, 0px);
+    transform: scale(1) translate(0px, 0px);
     -webkit-transform-origin: center center;
-            transform-origin: center center;
+    transform-origin: center center;
   }
 }
 
@@ -402,6 +421,7 @@ footer h3 {
   color: #ffffff;
   /* animation: mymove2 5s infinite; */
 }
+
 /* 
 @keyframes mymove2 {
   50% {
